--- a/build.yaml
+++ b/build.yaml
@@ -1,8 +1,23 @@
 include:
-  - board: cornix_e73
-    shield: cornix_main_left
-    artifact-name: cornix_left
+  # Use cornix with dongle
+  - board: cornix_dongle
+    shield: cornix_dongle_eyelash dongle_display
+    snippet: studio-rpc-usb-uart
+    artifact-name: cornix_dongle
 
-  - board: cornix_e73
-    shield: cornix_right
+  - board: cornix_ph_left
+    # shield: cornix_indicator
+    artifact-name: cornix_left_for_dongle
+
+  # Use cornix without dongle
+  # - board: cornix_left
+  #   # shield: cornix_indicator
+  #   artifact-name: cornix_left
+
+  - board: cornix_right
+    # shield: cornix_indicator
     artifact-name: cornix_right
+
+  - board: cornix_right
+    shield: settings_reset
+    artifact-name: reset
